2010-12-22 Peter Foerger  <pfoerger@gmail.com>

	* Fixed bug #10917: ShowUid is not checked for numeric content

2010-12-22 Steffen Kamper <info@sk-typo3.de>

	* Fixed wrong module template path

2010-07-29 Ingo Renner	<ingo3@typo3.org>

	* Added "type" as reserved word

2010-01-03 Ingo Renner	<ingo3@typo3.org>

	* Fixed a whitespace issue

2009-12-25 Ingo Renner	<ingo3@typo3.org>

	* Fixed bug #12891: kickstarter crashes with 5.3 (credits Steffen Kamper)
	* Added feature #12775: Use label tags in the language section (credits Georg Ringer)
	* Fixed bug #12768: extension key field not using htmlspecialchars (credits Georg Ringer)

2009-02-05 Steffen Kamper <info@sk-typo3.de>

	* Fixed bug #10335: Feature: highlight php code in "View result"

2009-02-03 Steffen Kamper <info@sk-typo3.de>

	* Fixed bug #10332: MySQL keywords are not complete

2009-01-23 Peter Foerger	<pfoerger@gmail.com>

	* Fixed bug #10161: 'blob' is also a reserved name/word

2009-01-12 Ingo Renner	<ingo3@typo3.org>

	* set the version number to 0.5.0-dev

2009-01-11 Ingo Renner	<ingo3@typo3.org>

	* Release of EXT:kickstarter v0.4.0

	* made use of mod.php for backend modules the only available method for backend modules
	* removed translationsas they're provided from the translation server
	* set the status to "stable"

2008-12-22 Steffen Kamper <info@sk-typo3.de>

	* feature #9990: Enable option to use BE-module with docheader
	* feature #9988: Enable option to use BE-module with _DISPATCH

2008-11-08 Francois Suter <francois@typo3.org>

	* Corrected wrong reference to page id in example modfunc code

2008-11-05 Ingo Renner	<ingo3@typo3.org>

	* Updated contact email, year in copyright notices
	* Fixed bug #9168: 'character' is also a reserved name/word
	* Fixed bug #2357: "Max filesize allowed (kb)" cannot be changed
	* Fixed bug #6479: wrong field names for localization
	* Fixed bug #4974: Enlarge Description field to a textarea
	* Fixed bug #9272: Remove clear.gif from BE module generation