@@ -1,5 +1,9 @@
 2010-12-22 Peter Foerger  <pfoerger@gmail.com>
 
+	* Fixed bug #11414 : After deletion of files kickstarter recreates them always (credits Daniel Hahler)
+
+2010-12-22 Peter Foerger  <pfoerger@gmail.com>
+
 	* Fixed bug #10917: ShowUid is not checked for numeric content
 
 2010-12-22 Steffen Kamper <info@sk-typo3.de>
